Fix face neighbor finding in Is_Face_Neighbor.
Also separate logic for deciding which face B data to use
into its own function and convert div tests.

--- a/tests/math/Makefile
+++ b/tests/math/Makefile
@@ -1,6 +1,10 @@
 all:
-	+@make tests/math_executables tests/math_tests -C ../..
+	@$(MAKE) tests/math_executables tests/math_tests -C ../..
+
+t: test
+test:
+	@$(MAKE) tests/math_tests -C ../..
 
 c: clean
 clean:
-	@make tests/math_clean -C ../..
+	@$(MAKE) tests/math_clean -C ../..
