Fix invocation of make in several project makefiles.

--- a/tests/grid_options/Makefile
+++ b/tests/grid_options/Makefile
@@ -1,6 +1,6 @@
 all:
-	@make tests/grid_options_executables tests/grid_options_tests -C ../..
+	@$(MAKE) tests/grid_options_executables tests/grid_options_tests -C ../..
 
 c: clean
 clean:
-	@make tests/grid_options_clean -C ../..
+	@$(MAKE) tests/grid_options_clean -C ../..
