--- a/tests/poisson/Makefile
+++ b/tests/poisson/Makefile
@@ -1,6 +1,6 @@
 all:
-	@make tests/poisson_executables tests/poisson_tests -C ../..
+	@$(MAKE) tests/poisson_executables tests/poisson_tests -C ../..
 
 c: clean
 clean:
-	@make tests/poisson_clean -C ../..
+	@$(MAKE) tests/poisson_clean -C ../..
