--- a/tests/muparserx/Makefile
+++ b/tests/muparserx/Makefile
@@ -1,6 +1,6 @@
 all:
-	@make tests/muparserx_executables tests/muparserx_tests -C ../..
+	@$(MAKE) tests/muparserx_executables tests/muparserx_tests -C ../..
 
 c: clean
 clean:
-	@make tests/muparserx_clean -C ../..
+	@$(MAKE) tests/muparserx_clean -C ../..
