Fix compilation of math tests, etc.

--- a/tests/divergence/Makefile
+++ b/tests/divergence/Makefile
@@ -1,6 +1,10 @@
 all:
 	+@make tests/divergence_executables tests/divergence_tests -C ../..
 
+t: test
+test:
+	@$(MAKE) tests/divergence_tests -C ../..
+
 c: clean
 clean:
 	@make tests/divergence_clean -C ../..
