--- a/.gitmodules
+++ b/.gitmodules
@@ -6,10 +6,10 @@
 	url = https://github.com/fmihpc/dccrg.git
 [submodule "submodules/gensimcell"]
 	path = submodules/gensimcell
-	url = https://github.com/nasailja/gensimcell.git
+	url = https://github.com/iljah/gensimcell.git
 [submodule "submodules/rapidjson"]
 	path = submodules/rapidjson
 	url = https://github.com/Tencent/rapidjson.git
 [submodule "submodules/eigen"]
 	path = submodules/eigen
-	url = https://github.com/eigenteam/eigen-git-mirror
+	url = https://gitlab.com/libeigen/eigen.git
